--- a/Application/Application/Preferences.xib
+++ b/Application/Application/Preferences.xib
@@ -218,7 +218,7 @@
                 <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" preferredMaxLayoutWidth="471" translatesAutoresizingMaskIntoConstraints="NO" id="njg-h7-piE">
                     <rect key="frame" x="72" y="146" width="475" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Block and alert on suspicious content pasted into terminals." id="qzK-DW-u5y">
+                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Block and alert on content pasted into terminals." id="qzK-DW-u5y">
                         <font key="font" size="13" name="Menlo-Regular"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
